--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -16,6 +16,18 @@ body{
     font-weight: 700;
     padding: 15px 35px;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    
+}
+.banner-discription{
+    color: #757575;
+    text-align: center;
+    font-size: 10px;
+}
 
 
 /*nav related styles*/
@@ -51,12 +63,47 @@ nav a{
 /* Header related style*/
 .header{
     background-color: #FFF8F3;
+    background-image: url('../image/background.png');
+    background-size: 700px 650px;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 650px;
 }
 .banner .profile-pic{
     width: 500px;
+}
+.banner-greating{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 800;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-discription{
+    margin-top: 0;
+    font-size: 15px;
+    text-align: left;
+}
+
+/*main section style*/
+
+/*about section style*/
+.about{
+    padding: 130px;
+    background-color: #FFF8F3;
+    margin: 130px 0;
+    
 }
