--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -149,7 +149,6 @@ main section{
     /* background-color: aliceblue; */
     gap: 14px;
 
-    
 }
 .skill{
     align-items: center;
@@ -244,3 +243,146 @@ footer{
 #footer-btn{
     margin-top: 25px;
 }
+
+
+.hide{
+    display: none;
+}
+
+
+
+/* style for mobile device  */
+@media only screen and (max-width: 576px) {
+
+
+    /* nav related css */
+
+    nav{
+        display: flex;
+        align-items: center;
+        justify-content:space-between ;
+        margin: 0px 10px;
+    
+    }
+    
+    .nav-title {
+        color: #181818;
+        font-size: 45px;
+        font-weight: 800;
+    }
+    nav > ul {
+        display: flex;
+        align-items: center;
+        
+    }
+    nav li{
+        list-style: none;
+        margin-right: 20px;
+    }
+    nav a{
+        text-decoration: none;
+        color: #474747;
+    }
+    
+
+
+    /* banner related css */
+    .banner-content{
+        max-width: 90%;
+        display: block;
+    }
+
+.banner{
+    padding: 10px 10px 0px 10px;
+    display: block;
+}
+
+
+    /* about section related css style */
+    .about{
+        padding: 10px;
+        background-color: #FFF8F3;
+        margin: 130px 0;
+        
+    }
+    .about-info-container{
+        display: block;
+        flex-direction: row;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding-bottom: 0%;
+    }
+    /* what i do section related css */
+    #what-i-do-driscription{
+        margin-bottom: 100px;
+    }
+
+    .skills-container{
+        display: block;
+        margin: 10px;
+        /* background-color: aliceblue; */
+    
+    }
+    .skill{
+        padding: 10px;
+        margin: 20px;
+        border-radius: 5px;
+        background: #FFF;
+        box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    
+    }
+
+#what-i-do-driscription{
+    padding: 20px 10px;
+
+}
+
+    /* resume section related css */
+
+    .resume-container{
+        display: block;
+    } 
+    .resume-colum-title{
+        margin-top: 150px;
+    }
+    .resume-item{
+        padding: 10px;
+    }
+
+    /* footer related css */
+    footer{
+        display: block;
+        padding:10px;
+    }
+    .footer-column{
+        width: 100%;
+    }
+    .contact input[type="text"], .contact input[type="email"], textarea{
+        display: block;
+        margin-top: 15px;
+        padding: 12px 25px;
+        border-radius: 5px;
+        border: none;
+        width: 90%;
+        background: #FFF;
+        color: #757575;
+    }
+    .section-title{
+        margin-top: 50px;
+    }
+    #footer-btn{
+        display: flex;
+        margin-top: 25px;
+    }
+    .section-description{
+        width: 95%;
+    }
+#footer-btn{
+    margin-left: 40%;
+}
+   
+}
+
+
+
+
